--- a/ui/widgets/widgets-dir/strapi-config-app/strapi-config-descriptor.yaml
+++ b/ui/widgets/widgets-dir/strapi-config-app/strapi-config-descriptor.yaml
@@ -1,6 +1,6 @@
 code: strapi-config-app
 titles:
-  en: Strapi config widget
-  it: Modello di contenuto
+  en: Strapi Config
+  it: Strapi Config
 group: free
 customUiPath: strapi-config-widget.ftl
